# rules_7zip

./: MODULE.bazel  defs.bzl  extensions.bzl  setup.bzl
example/: MODULE.bazel
